Added an email picture and google fonts

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     </script>
 
 	<!--<link rel='stylesheet' href='style.css'>-->
+    <link href='http://fonts.googleapis.com/css?family=Orienta' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/index.css" />
 	<script text="text/javascript" src="js/index.js"></script>
 
@@ -32,17 +33,24 @@
 
 	</div>
 
+
     <div data-role="content" style="padding: 15px">
 
         <p align="center">An automated mad libs email generator</p>
         <p align="center"> to keep in touch </p>
         <p align="center"> so you don't have to! </p>
 
+        <div align="center">
+            <img src="images/email.png" align="center" />
+        </div>
+
 		<div>
             <p><a href="#signUpPage" data-role="button">Sign Up Now!</a></p>
 		</div>
 
     </div>
+
+
 </div>
 
 <div data-role="page" id="signUpPage">
